<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="swiggyStepRowAction" type="id" />
    <item name="swiggyStepAcknowledgement" type="id" />
</resources>
